<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab2Layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:weightSum="1" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="80dp"
            android:maxHeight="80dp"
            android:minHeight="80dp"
            android:minWidth="80dp"
            android:text="@string/d3"
            android:width="80dp" >
        </Button>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="80dp"
            android:maxHeight="80dp"
            android:minHeight="80dp"
            android:minWidth="80dp"
            android:text="@string/d4"
            android:width="80dp" >
        </Button>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="80dp"
            android:maxHeight="80dp"
            android:minHeight="80dp"
            android:minWidth="80dp"
            android:text="@string/d6"
            android:width="80dp" >
        </Button>

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="80dp"
            android:maxHeight="80dp"
            android:minHeight="80dp"
            android:minWidth="80dp"
            android:text="@string/d8"
            android:width="80dp" >
        </Button>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="1" >

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="80dp"
            android:maxHeight="80dp"
            android:minHeight="80dp"
            android:minWidth="80dp"
            android:text="@string/d10"
            android:width="80dp" >
        </Button>

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="80dp"
            android:maxHeight="80dp"
            android:minHeight="80dp"
            android:minWidth="80dp"
            android:text="@string/d12"
            android:width="80dp" >
        </Button>

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="80dp"
            android:maxHeight="80dp"
            android:minHeight="80dp"
            android:minWidth="80dp"
            android:text="@string/d20"
            android:width="80dp" >
        </Button>

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="80dp"
            android:maxHeight="80dp"
            android:minHeight="80dp"
            android:minWidth="80dp"
            android:text="@string/dPercent"
            android:width="80dp" >
        </Button>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingRight="30dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="18dp" >
        </TextView>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="18dp" >
        </TextView>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text=""
            android:textSize="18dp"
            android:visibility="invisible" >
        </TextView>
    </TableRow>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center"
        android:textSize="160dp" >
    </TextView>

</TableLayout>